--- a/html/cv.html
+++ b/html/cv.html
@@ -3,21 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Alexandre Condette</title>
-		<link rel="stylesheet" href="./ressources/css/main.css">
-		<link rel="stylesheet" href="./ressources/css/menu.css">
+		<link rel="stylesheet" href="../ressources/css/main.css">
+		<link rel="stylesheet" href="../ressources/css/menu.css">
 	</head>
 	
 	<body>
 		<nav>
 			<ul class="menu">
 				<li>
-					<a href="html/intro.html" target="_self">Accueil</a>
+					<a href="../index.html" target="_self">Accueil</a>
 				</li>
 				<li>
-					<a href="html/cv.html" target="_self">Mon CV</a>
+					<a href="./cv.html" target="_self">Mon CV</a>
 				</li>
 				<li>
-					<a href="html/cours.html" target="_self">Cours IPSA</a>
+					<a href="./cours.html" target="_self">Cours IPSA</a>
 					<ul class="details">
 						<li><a href="#">Aéro 1</a></li>
 						<li><a href="#">Aéro 2</a></li>
@@ -25,7 +25,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="html/contact.html" target="_self">Me contacter</a>
+					<a href="./contact.html" target="_self">Me contacter</a>
 				</li>
 			</ul>
 		</nav>
