Modification du index.html'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul class="menu">
 				<li>
-					<a href="html/intro.html" target="_self">Accueil</a>
+					<a href="intro.html" target="_self">Accueil</a>
 				</li>
 				<li>
 					<a href="html/cv.html" target="_self">Mon CV</a>
