--- a/html/cv.html
+++ b/html/cv.html
@@ -25,6 +25,8 @@
 						<li><a href="#">Aéro 3</a></li>
 					</ul>
 				</li>
+				<li><a href="./documents.html" target="_self">Mes documents</a></li>
+				<li><a href="./blog.html" target="_self">Blog</a></li>
 				<li>
 					<a href="./contact.html" target="_self">Me contacter</a>
 				</li>
@@ -44,6 +46,12 @@
 					<li><a>Major de promotion Espace, Lanceurs et Satellites, option Systèmes embarqués (ELSS)</a></li>
 				</ul>
 				
+				<ul class="reseaux_bloc">
+					<li><a class="reseaux" href="https://www.instagram.com/alex_cndt/?hl=fr"><img src="../ressources/img/instagram.png"></a></li>
+					<li><a class="reseaux" href="https://www.facebook.com/alexandre.condette1"><img src="../ressources/img/facebook.png"></a></li>
+					<li><a class="reseaux" href="https://www.linkedin.com/in/alexandre-condette/"><img src="../ressources/img/linkedin.png"></a></li>
+					<li><a class="reseaux" href="https://github.com/A-Cndt"><img src="../ressources/img/github.png"></a></li>
+				</ul>
 				<hr>
 			</nav>
 			
@@ -52,7 +60,7 @@
 					<li><a class="rubrique">Expérience Professionnelle</a></li>
 						<nav class="box_info">
 								<a class="poste"> Ingénieur développement logiciel</a>
-								<img src="../ressources/img/logo_spacebel.png" class="logo_spacebel">
+								<a href="https://www.spacebel.com/fr/accueil" target="_blank"><img src="../ressources/img/logo_spacebel.png" class="logo_spacebel"></a>
 							<br>
 							<ul>
 								<li><a2 class="entreprise">
@@ -82,7 +90,7 @@
 						
 						<nav class="box_info">
 								<a class="poste">Enseignant Vacataire</a>
-								<img src="../ressources/img/logo_ipsa.png" class="logo_spacebel">
+								<a href="https://www.ipsa.fr/" target="_blank"><img src="../ressources/img/logo_ipsa.png" class="logo_spacebel"></a>
 							<br>
 							<ul>
 								<li><a2 class="entreprise">
