--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 						<li><a href="#">Aéro 3</a></li>
 					</ul>
 				</li>
+				<li><a hrf="./documents.html" target="_self">Mes documents</a></li>
 				<li>
 					<a href="html/contact.html" target="_self">Me contacter</a>
 				</li>
+				
 			</ul>
 		</nav>
 	</body>
