Finalisation page CV

--- a/html/cours.html
+++ b/html/cours.html
@@ -24,6 +24,8 @@
 						<li><a href="#">Aéro 3</a></li>
 					</ul>
 				</li>
+				<li><a href="./documents.html" target="_self">Mes documents</a></li>
+				<li><a href="./blog.html" target="_self">Blog</a></li>
 				<li>
 					<a href="./contact.html" target="_self">Me contacter</a>
 				</li>
