--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul class="menu">
 				<li>
-					<a href="intro.html" target="_self">Accueil</a>
+					<a href="./index.html" target="_self">Accueil</a>
 				</li>
 				<li>
 					<a href="html/cv.html" target="_self">Mon CV</a>
@@ -24,11 +24,11 @@
 						<li><a href="#">Aéro 3</a></li>
 					</ul>
 				</li>
-				<li><a hrf="./documents.html" target="_self">Mes documents</a></li>
+				<li><a href="html/documents.html" target="_self">Mes documents</a></li>
+				<li><a href="html/blog.html" target="_self">Blog</a></li>
 				<li>
 					<a href="html/contact.html" target="_self">Me contacter</a>
 				</li>
-				
 			</ul>
 		</nav>
 	</body>
