--- a/html/cv.html
+++ b/html/cv.html
@@ -58,49 +58,7 @@
 			<nav class="exp_pro">
 				<ul>
 					<li><a class="rubrique">Langues maitrisées</a></li>
-						<nav class="box_info">
-							<ul>
-								<li><a><img src=../ressources/img/fr.png class="langue"></a>
-								<a>
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								</a>
-								<a class="niveau">Langue Maternelle</a></li>
-								<li></li>
-								<li><a><img src=../ressources/img/gb.png class="langue"></a>
-								<a>
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								</a>
-								<a class="niveau">Courant (C1/C2)</a></li>
-								<li></li>
-								<li><a><img src=../ressources/img/allemagne.png class="langue"></a>
-								<a>
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								</a>
-								<a class="niveau">Avancé (B2/C1)</a></li>
-								<li></li>
-								<li><a><img src=../ressources/img/espagne.png class="langue"></a>
-								<a>
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile_noire.png" class="etoile">
-								<img src="../ressources/img/etoile.png" class="etoile">
-								</a>
-								<a class="niveau">Notions</a></li>
-							</ul>
-						</nav>
+						<img src="../ressources/img/langues.png" class="langue">
 						
 					<li><a class="rubrique">Expérience Professionnelle</a></li>
 						<nav class="box_info">
