--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 		</nav>
 
 		<nav class="content">
-			Test
+			Bonjour et bienvenu sur mon site internet.
+			<br>
+			Vous pourrez retrouver ici, mon CV, mes supports de cours dispensés à l'Institut Polytechnique des Sciences Avancées (IPSA) de Toulouse, certaines de mes publications personnelles, ainsi qu'une interface de type blog sur des sujets qui me passionnent, liés au spatial, à l'aéronautique, mais pas que !
+			<br>
+			En vous souhaitant une bonne visite sur le site !
 		</nav>
 	</body>
 	
