Modif page de garde

--- a/index.html
+++ b/index.html
@@ -34,11 +34,37 @@
 
 		<nav class="content">
 			<a class="titre">Introduction</a>
-			Bonjour et bienvenu sur mon site internet.
-			<br>
-			Vous pourrez retrouver ici, mon CV, mes supports de cours dispensés à l'Institut Polytechnique des Sciences Avancées (IPSA) de Toulouse, certaines de mes publications personnelles, ainsi qu'une interface de type blog sur des sujets qui me passionnent, liés au spatial, à l'aéronautique, mais pas que !
-			<br>
-			En vous souhaitant une bonne visite sur le site !
+			<div>
+				Bonjour et bienvenue sur mon site internet.
+				<br/>
+				<br/>
+				Vous pourrez retrouver ici, mon CV, mes supports de cours dispensés à l'Institut Polytechnique des Sciences Avancées (IPSA) de Toulouse, certaines de mes publications personnelles, ainsi qu'une interface de type blog sur des sujets qui me passionnent, liés au spatial, à l'aéronautique, mais pas que !
+				<br/>
+				<br/>
+				En vous souhaitant une bonne visite sur le site !
+				<br/>
+				<br/>
+				<hr/>
+			</div>
+
+			<div>
+				<a class="rubrique">Mon CV</a>
+
+				<div class="cv_css">
+					<div class="bookpage"></div>
+					<a href="./html/cv.html"></a><div class="cover"><a class='cover_text' href="./html/cv.html">Voir le CV</a></div>
+				</div></a>
+			</div>
+			<div>
+				<a class="rubrique">Cours IPSA</a>
+
+			</div>
+			<div>
+				<a class="rubrique">Mes documents</a>
+			</div>
+			<div>
+				<a class="rubrique">Blog - Derniers articles</a>
+			</div>
 		</nav>
 	</body>
 	
